# attrackt

./: .gitignore  README.md  pyproject.toml
attrackt/autoencoder/: __init__.py  autoencoder_model.py  autoencoder_model3d.py  decoder.py  decoder3d.py  diagonal_gaussian_distribution.py  encoder.py  encoder3d.py  resnet.py  resnet3d.py  utils.py  zarr_csv_dataset_autoencoder.py
attrackt/scripts/: __init__.py  create_csv.py  create_csv_batch.py  create_zarr.py  cumulate_scores.py  extract_data.py  identify_valid_sequences.py  load_csv_associations.py  load_csv_data.py  load_csv_embeddings.py  load_csv_ilp_result.py  sort.py  utils.py
attrackt/scripts/autoencoder/: infer_autoencoder.py  train_autoencoder.py
attrackt/scripts/logger/: logger.py
attrackt/scripts/motile/: __init__.py  costs.py  motile_infer.py  run_traccuracy.py  saving_utils.py  utils.py
attrackt/scripts/trackastra/: general_utils.py  infer.py  infer_finetuned.py  train_finetuned.py  train_fully_unsupervised.py
attrackt/trackastra/: _version.py
attrackt/trackastra/data/: __init__.py  ctc_zarr_data.py  data.py  sampler.py  sampler_finetuned.py  wrfeat.py
attrackt/trackastra/model/: model.py  model_api.py  predict.py  pretrained.py
attrackt/trackastra/tracking/: tracking.py
attrackt/trackastra/utils/: utils.py
